--- a/doctolib/account/templates/register.html
+++ b/doctolib/account/templates/register.html
@@ -59,6 +59,34 @@
                                                     <div class="invalid-feedback d-block">{{ form.email.errors }}</div>
                                                 {% endif %}
                                             </div>
+                                            <div class="form-floating mb-3">
+                                                {{ form.phone }}
+                                                <label for="{{ form.phone.id_for_label }}">Téléphone</label>
+                                                {% if form.phone.errors %}
+                                                    <div class="invalid-feedback d-block">{{ form.phone.errors }}</div>
+                                                {% endif %}
+                                            </div>
+                                            <div class="form-floating mb-3">
+                                                {{ form.date_naissance }}
+                                                <label for="{{ form.date_naissance.id_for_label }}">Date de naissance</label>
+                                                {% if form.date_naissance.errors %}
+                                                    <div class="invalid-feedback d-block">{{ form.date_naissance.errors }}</div>
+                                                {% endif %}
+                                            </div>
+                                            <div class="mb-3">
+                                                <label class="form-label">Vous êtes :</label>
+                                                {% for radio in form.role %}
+                                                    <div class="form-check">
+                                                        {{ radio }}
+                                                        <label class="form-check-label" for="{{ radio.id_for_label }}">
+                                                            {{ radio.choice_label }}
+                                                        </label>
+                                                    </div>
+                                                {% endfor %}
+                                                {% if form.role.errors %}
+                                                    <div class="invalid-feedback d-block">{{ form.role.errors }}</div>
+                                                {% endif %}
+                                            </div>
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
