--- a/doctolib/account/templates/login.html
+++ b/doctolib/account/templates/login.html
@@ -38,7 +38,7 @@
                                                 </div>
                                             {% endfor %}
                                         {% endif %}
-                                        <form method="post">
+                                        <form method="post" action="{% url 'login' %}">
                                             {% csrf_token %}
                                             {% for field in form %}
                                                 <div class="form-floating mb-3">
