--- a/doctolib/patient/templates/patient_dashboard.html
+++ b/doctolib/patient/templates/patient_dashboard.html
@@ -13,9 +13,10 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <div class="blue-column"></div>
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-primary">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
+            <a class="navbar-brand ps-3 fst-italic text-center w-100 fs-1 d-block" href="index.html" style="font-family: 'Great Vibes', cursive; font-weight: 700; text-align: center;">Start Bootstrap</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
@@ -40,82 +41,85 @@
         </nav>
         <div id="layoutSidenav">
             <div id="layoutSidenav_nav">
-                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                <nav class="sb-sidenav accordion sb-sidenav-light" id="sidenavAccordion" style="background-color: white;">
+                    <nav class="sb-sidenav accordion sb-sidenav-dark bg-primary" id="sidenavAccordion" style="height: 50vh;">
+                        <div class="d-flex justify-content-between">
+                            <a href="#" class="btn btn-outline-info w-45 mt-2 mb-3 me-1 text-white">
+                                <i class="fas fa-tachometer-alt me-2"></i>Dashboard
+                            </a>
+                            <a href="#" class="btn btn-outline-info w-45 mt-2 mb-3 ms-1 text-white">
+                                <i class="fas fa-user-circle me-2"></i>Logged in as : Start Bootstrap
+                            </a>                                                        
+                        </div>                        
                     <div class="sb-sidenav-menu">
                         <div class="nav">
-                            <div class="sb-sidenav-menu-heading">Core</div>
+                            <div class="sb-sidenav-menu-heading"></div>
                             <h1 class="mt-4">
-                                <a href="#" class="btn btn-primary btn-lg btn-block">
-                                    <i class="fas fa-tachometer-alt me-2"></i>Dashboard
-                                </a>
                             </h1>                            
-                            <div class="sb-sidenav-menu-heading">Interface</div>
-                            <a class="nav-link" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                                <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                            <div class="sb-sidenav-menu-heading"></div>
+                            <a class="nav-link text-white" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="sb-nav-link-icon"><i class="fas fa-columns text-white"></i></div>
                                 Layouts
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down text-white"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingLayouts" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="layout-static.html">Static Navigation</a>
-                                    <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
+                                    <a class="nav-link text-white" href="layout-static.html">Static Navigation</a>
+                                    <a class="nav-link text-white" href="layout-sidenav-light.html">Light Sidenav</a>
                                 </nav>
                             </div>                                                        
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            <a class="nav-link collapsed text-white" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                                <div class="sb-nav-link-icon"><i class="fas fa-book-open text-white"></i></div>
                                 Pages
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down text-white"></i></div>
                             </a>
                             <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
+                                    <a class="nav-link collapsed text-white" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
                                         Authentication
-                                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down text-white"></i></div>
                                     </a>
                                     <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="login.html">Login</a>
-                                            <a class="nav-link" href="register.html">Register</a>
-                                            <a class="nav-link" href="password.html">Forgot Password</a>
+                                            <a class="nav-link text-white" href="login.html">Login</a>
+                                            <a class="nav-link text-white" href="register.html">Register</a>
+                                            <a class="nav-link text-white" href="password.html">Forgot Password</a>
                                         </nav>
                                     </div>
-                                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
+                                    <a class="nav-link collapsed text-white" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
                                         Error
-                                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down text-white"></i></div>
                                     </a>
                                     <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="401.html">401 Page</a>
-                                            <a class="nav-link" href="404.html">404 Page</a>
-                                            <a class="nav-link" href="500.html">500 Page</a>
+                                            <a class="nav-link text-white" href="401.html">401 Page</a>
+                                            <a class="nav-link text-white" href="404.html">404 Page</a>
+                                            <a class="nav-link text-white" href="500.html">500 Page</a>
                                         </nav>
                                     </div>
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading">Addons</div>
-                            <a class="nav-link" href="charts.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                            <div class="sb-sidenav-menu-heading text-white"></div>
+                            <a class="nav-link text-white" href="charts.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area text-white"></i></div>
                                 Charts
                             </a>
-                            <a class="nav-link" href="tables.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            <a class="nav-link text-white" href="tables.html">
+                                <div class="sb-nav-link-icon"><i class="fas fa-table text-white"></i></div>
                                 Tables
-                            </a>
+                            </a>                            
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                        <button class="btn btn-primary btn-block text-white">
-                            <i class="fas fa-user-circle me-2"></i>Logged in as : Start Bootstrap
-                        </button>
                     </div>                    
                 </nav>
             </div>
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">Dashboard</h1>
+                        <h1 class="mt-4 fst-italic" style="font-family: 'Great Vibes', cursive; font-weight: 700; color: #3b5dcc;">Dashboard</h1>
                         <ol class="breadcrumb mb-4">
-                            <li class="breadcrumb-item active">Dashboard</li>
+                            <li class="breadcrumb-item active"></li>
                         </ol>
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
@@ -181,7 +185,7 @@
                                 DataTable Example
                             </div>
                             <div class="card-body">
-                                <table id="datatablesSimple">
+                                <table id="datatablesSimple" class="table table-striped table-hover">
                                     <thead>
                                         <tr>
                                             <th>Name</th>
