--- a/doctolib/patient/templates/patient_dashboard.html
+++ b/doctolib/patient/templates/patient_dashboard.html
@@ -8,15 +8,75 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Espace patient</title>
+        <style>
+            .custom-btn:hover {
+                background-color: #87CEFA !important; /* Bleu ciel */
+                color: white !important;
+            }
+        </style>
+        <style>
+            .white-circle {
+                position: absolute;
+                border-radius: 60%;
+                background-color: rgba(248, 244, 244, 0.1);
+            }
+    
+            .circle1 {
+                width: 100px;
+                height: 100px;
+                top: -20px;
+                left: -20px;
+            }
+    
+            .circle2 {
+                width: 80px;
+                height: 80px;
+                top: 60px;
+                right: 30px;
+            }
+    
+            .circle3 {
+                width: 80px;
+                height: 80px;
+                top: 50%;
+                left: 30%;
+            }
+            .circle4 {
+                width: 100px;
+                height: 100px;
+                top: 20%;
+                left: 50%;
+            }
+            .circle5 {
+                width: 100px;
+                height: 100px;
+                top: 40%;
+                left: 40%;
+            }
+            .circle6 {
+                width: 80px;
+                height: 80px;
+                top: 70%;
+                left: 30%;
+            }
+        </style>        
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
         <div class="blue-column"></div>
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-primary">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-primary" style ="background-color: #287bc4 !important;">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3 fst-italic text-center w-100 fs-1 d-block" href="index.html" style="font-family: 'Great Vibes', cursive; font-weight: 700; text-align: center;">Start Bootstrap</a>
+            <a class="navbar-brand ps-20 fst-italic text-center w-100 fs-1 d-block" 
+                href="index.html" 
+                style="font-family: 'Great Vibes', cursive; 
+                        font-weight: 1150; 
+                        text-align: center; 
+                        font-size: 4vw !important;  /* Augmentation significative de la taille */
+                        line-height: 1.2; 
+                        letter-spacing: 2px;">« Start Bootstrap »</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
@@ -42,22 +102,14 @@
         <div id="layoutSidenav">
             <div id="layoutSidenav_nav">
                 <nav class="sb-sidenav accordion sb-sidenav-light" id="sidenavAccordion" style="background-color: white;">
-                    <nav class="sb-sidenav accordion sb-sidenav-dark bg-primary" id="sidenavAccordion" style="height: 50vh;">
-                        <div class="d-flex justify-content-between">
-                            <a href="#" class="btn btn-outline-info w-45 mt-2 mb-3 me-1 text-white">
-                                <i class="fas fa-tachometer-alt me-2"></i>Dashboard
-                            </a>
-                            <a href="#" class="btn btn-outline-info w-45 mt-2 mb-3 ms-1 text-white">
-                                <i class="fas fa-user-circle me-2"></i>Logged in as : Start Bootstrap
-                            </a>                                                        
-                        </div>                        
+                    <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion" style="height: 50vh; border-bottom-left-radius: 20px; border-bottom-right-radius: 50px; background-color: #287bc4 !important;">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading"></div>
                             <h1 class="mt-4">
                             </h1>                            
                             <div class="sb-sidenav-menu-heading"></div>
-                            <a class="nav-link text-white" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <a class="nav-link text-white" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts" style="font-size: 2rem !important; font-weight: bold;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-columns text-white"></i></div>
                                 Layouts
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down text-white"></i></div>
@@ -68,7 +120,7 @@
                                     <a class="nav-link text-white" href="layout-sidenav-light.html">Light Sidenav</a>
                                 </nav>
                             </div>                                                        
-                            <a class="nav-link collapsed text-white" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
+                            <a class="nav-link collapsed text-white" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages" style="font-size: 2rem !important; font-weight: bold;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-book-open text-white"></i></div>
                                 Pages
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down text-white"></i></div>
@@ -96,22 +148,39 @@
                                             <a class="nav-link text-white" href="404.html">404 Page</a>
                                             <a class="nav-link text-white" href="500.html">500 Page</a>
                                         </nav>
-                                    </div>
+                                    </div>                                  
                                 </nav>
                             </div>
                             <div class="sb-sidenav-menu-heading text-white"></div>
-                            <a class="nav-link text-white" href="charts.html">
+                            <a class="nav-link text-white" href="charts.html"  style="font-size: 2rem !important; font-weight: bold;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area text-white"></i></div>
                                 Charts
                             </a>
-                            <a class="nav-link text-white" href="tables.html">
+                            <a class="nav-link text-white" href="tables.html" style="font-size: 2rem !important; font-weight: bold;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table text-white"></i></div>
                                 Tables
                             </a>                            
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                    </div>                    
+                    </div>
+                    <div class="text-center mt-5 mb-5" style="padding-left: 1160px;">
+                        <h2 class="text-white" style="font-family: 'Great Vibes', cursive; font-size: 3rem; font-weight: 1200; line-height: 1.2;">Vos diagnostics de façon automatisée...</h2>
+                    </div> 
+                    <div class="d-flex justify-content-between">
+                        <a href="#" class="btn btn-outline-primary w-45 mt-2 mb-3 me-1 bg-white custom-btn fs-4 py-3" style="color: #0d6efd; font-size: 1.5rem !important;">
+                            <i class="fas fa-tachometer-alt me-2"></i>Dashboard
+                        </a>
+                        <a href="#" class="btn btn-outline-primary w-45 mt-2 mb-3 ms-1 bg-white custom-btn fs-4 py-3" style="color: #0d6efd; font-size: 1.5rem !important;">
+                            <i class="fas fa-user-circle me-2"></i>Logged in as : Start Bootstrap
+                        </a>                       
+                    </div>
+                    <div class="white-circle circle1"></div>
+                    <div class="white-circle circle2"></div>
+                    <div class="white-circle circle3"></div>
+                    <div class="white-circle circle4"></div>
+                    <div class="white-circle circle5"></div>
+                    <div class="white-circle circle6"></div>                                                                                                                      
                 </nav>
             </div>
             <div id="layoutSidenav_content">
